Restyle resource header to prevent wild title overflows

--- a/oc_platform/assets/sass/_resources.sass
+++ b/oc_platform/assets/sass/_resources.sass
@@ -181,12 +181,18 @@
 	a
 		display: inline-block
 
+.oer-title-breadcrumb
+	float: right
+	width: 510px
+
+	.supporting-action-button
+		float: none
+
 .oer-title
 	padding-top: 4px
 
 	h2
-		display: inline-block
-		float: left
+		display: inline
 
 	.oer-title-resource-type
 		@include border-radius(2px)
@@ -207,7 +213,7 @@
 	.history-action
 		margin-left: 10px
 
-.oer-title, .resource-big-actions
+.resource-big-actions
 	height: 28px
 
 
