--- a/oc_platform/assets/sass/style.sass
+++ b/oc_platform/assets/sass/style.sass
@@ -330,7 +330,6 @@ article select#chapter-select
 .breadcrumb
 	line-height: normal
 	font-size: 0.93em
-	overflow: hidden
 
 	a
 		color: #557799
